# voice2blog

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md
config/: llm.json  whisper.json
src/: api.rs  audio.rs  config.rs  env.rs  main.rs
