[package]
name = "voice2blog"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.4"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.2"
dotenv = "0.15.0"
audiopus = "0.2.0"
